wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: galaxy-digital-svc
  namespace: galaxy-digital
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30080
  selector:
    app: galaxy-digital
